--- a/client/package.json
+++ b/client/package.json
@@ -29,11 +29,11 @@
     "fluent-ffmpeg": "^2.1.3",
     "formik": "^2.4.6",
     "multer": "^2.0.1",
-    "next": "15.3.1",
+    "next": "^16.1.1",
     "nodemailer": "^7.0.12",
     "pg": "^8.14.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "tmp-promise": "^3.0.3",
     "yup": "^1.6.1"
@@ -46,13 +46,13 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/pg": "^8.11.13",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.20.14",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "^16.1.1",
     "express": "^5.1.0",
     "https": "^1.0.0",
     "postcss": "^8.5.3",
